--- a/class/webpage/dothome.html
+++ b/class/webpage/dothome.html
@@ -142,89 +142,86 @@
         영문/숫자/특수문자 중 2가지 포함 8~20자 까지
       </div>
 
-      <div class="mid-margin-bottom top-border">
-        <label for="name">이름(필수)</label>
-        <input id="name" type="text" title="이름" placeholder="이름(필수)" />
+      <div class="mid-margin-bottom">
+        <label for="name" class="blind">이름(필수)</label>
+        <input id="name" type="text" title="이름" placeholder="이름(필수)" class="input-text width-full" />
       </div>
 
-      <div>
+      <div class="form-desc">
         이름 또는 회사명을 입력해주세요
       </div>
 
-      <div>
-        <label for="tel">연락처(필수)</label>
-        <input id="tel" type="text" title="연락처" placeholder="연락처" />
+      <div class="mid-margin-bottom">
+        <label for="tel" class="blind">연락처(필수)</label>
+        <input id="tel" type="text" title="연락처" placeholder="연락처" class="input-text width-full" />
       </div>
 
-      <div>
+      <div class="form-desc">
         예) 02-123-4567 or 010-1234-5678
       </div>
 
-      <div>
-        <label for="msg">확인문자</label>
-        <input id="msg" type="text" title="확인문자" placeholder="확인문자" />
+      <div class="mid-margin-bottom">
+        <label for="msg" class="blind">확인문자</label>
+        <input id="msg" type="text" title="확인문자" placeholder="확인문자" class="input-text width-sms" />
       </div>
 
-      <div>
+      <div class="form-desc">
         옆에 단어를 입력해주세요
       </div>
 
-      <div>
-        <label>기본이메일(필수)</label>
-        <input type="text" title="기본 이메일 앞자리" placeholder="이메일 앞자리" />
-        <span>@</span>
-        <input type="text" title="기본 이메일 뒷자리 - 직접입력" placeholder="이메일 뒷자리(직접입력)" />
+      <div class="mid-margin-bottom top-border clearfix">
+        <label for="email" class="blind">기본이메일(필수)</label>
+        <input id="email" type="text" title="기본 이메일 앞자리" placeholder="이메일 앞자리" class="input-text width-email left-float" />
+        <span class="email-mark left-float">@</span>
+        <input type="text" title="기본 이메일 뒷자리 - 직접입력" placeholder="이메일 뒷자리(직접입력)" class="input-text width-email left-float" />
       </div>
 
-      <div>
+      <div class="form-desc">
         서비스만료 및 서비스정보를 메일 또는 문자로 받는데 동의합니다.
       </div>
 
-      <div>
-        <span>
-          <input id="email-check" type="checkbox" />
-          <label for="email-check">이메일</label>
+      <div class="center-text">
+        <span class="check-wrap">
+          <input id="email-check" type="checkbox" class="chk-box" />
+          <label for="email-check" class="check-label">이메일</label>
         </span>
-        <span>
-          <input id="sms" type="checkbox" />
-          <label for="sms">문자</label>
+        <span class="check-wrap">
+          <input id="sms" type="checkbox" class="chk-box" />
+          <label for="sms" class="check-label">문자</label>
         </span>
       </div>
 
-      <P>
+      <p class="msg-box">
         중복회원가입 이용제한, 무료호스팅은 (본인실명 1회)만 가능 합니다.
-      </P>
+      </p>
 
-      <div>
-        <span>
-          <input id="usage-terms" type="checkbox" />
-          <label for="usage-terms">이용약관</label>
+      <div class="terms-chk-box">
+        <span class="chk-item">
+          <input id="usage-terms" type="checkbox" class="chk-box" />
+          <label for="usage-terms" class="check-label">이용약관</label>
           <span>전문보기</span>
         </span>
 
-        <span>
-          <input id="service-terms" type="checkbox" />
-          <label for="service-terms">서비스 이용약관</label>
-          <span>전문보기</span>
-        </span>
-      </div>
-
-      <div>
-        <span>
-          <input id="private" type="checkbox" />
-          <label for="private">개인정보 이용 동의</label>
+        <span class="chk-item">
+          <input id="service-terms" type="checkbox" class="chk-box" />
+          <label for="service-terms" class="check-label">서비스 이용약관</label>
           <span>전문보기</span>
         </span>
 
-        <span>
-          <input id="all-agree" type="checkbox" />
-          <label for="all-agree">모두 동의합니다.</label>
+        <span class="chk-item">
+          <input id="private" type="checkbox" class="chk-box" />
+          <label for="private" class="check-label">개인정보 이용 동의</label>
+          <span>전문보기</span>
+        </span>
+
+        <span class="chk-item">
+          <input id="all-agree" type="checkbox" class="chk-box" />
+          <label for="all-agree" class="check-label">모두 동의합니다.</label>
         </span>
       </div>
 
-      <div>
-        <button type="button">가입하기</button>
-      </div>
+      <button type="button" class="btn btn-join">가입하기</button>
+
 
     </div>
 
